# vulkan_graphics_demo

./: .gitmodules  CMakeLists.txt  README.md
bak/: Model_back.cpp  Model_back.h
models/: bug.glb  cube.glb  dio.glb  plane.glb  tiny.glb
models/backpack/: backpack.glb
models/for_demo/: desk.glb  full-desk.glb  god.glb  plane.glb  plane2.glb  prova.glb  prova_optimized.glb  rope-barrier.glb  rope2.glb  scene.blend  scene.blend1  scene.glb
models/for_demo/graduation_hat/: hat.glb
models/for_demo/opengl_logo/: logo.glb  scene.gltf
models/for_demo/rare_logo/: rare.glb
models/for_demo/vip_rope_barrier/: license.txt
models/for_demo/vulkan_logo/: logo.glb  scene.gltf
shaders/: frag.spv  light_cube.vert  light_cube_vert.spv  texture.vert  vert.spv
shaders/bindless-textures/built/: texture_frag.spv
shaders/bindless-textures/src/: texture.frag  texture.vert
shaders/built/: bloom_frag.spv  gbuffer_frag.spv  gbuffer_vert.spv  light_cube_frag.spv  light_cube_vert.spv  post_processing_frag.spv  skybox_vert.spv  texture_deferred_frag.spv  texture_deferred_vert.spv  texture_frag.spv  texture_vert.spv
shaders/built/bloom/: bloom_frag.spv  bright_point_extraction_frag.spv  composition_frag.spv
shaders/built/shadows/: directional_shadow_vert.spv
shaders/demo/built/: skybox_vert.spv
shaders/demo/src/: skybox.vert
shaders/hdr/built/: texture_frag.spv
shaders/hdr/src/: postprocessing.vert  texture.frag  texture.vert
shaders/model-loading/built/: light_cube_vert.spv  texture_frag.spv  texture_vert.spv
shaders/model-loading/src/: texture.frag  texture.vert
shaders/phong-shading/built/: light_cube_frag.spv  light_cube_vert.spv  texture_vert.spv
shaders/phong-shading/src/: light_cube.frag  light_cube.vert  texture.frag
shaders/post_processing/built/: postprocessing_frag.spv
shaders/post_processing/src/: postprocessing.frag  texture.frag
shaders/post_processing_texture/built/: postprocessing_frag.spv  postprocessing_vert.spv  texture_frag.spv
shaders/post_processing_texture/src/: light_cube.vert  postprocessing.frag
shaders/refactored/built/: postprocessing_frag.spv  texture_frag.spv
shaders/refactored/src/: light_cube.vert  texture.frag
shaders/src/: gbuffer.frag  gbuffer.vert  light_cube.frag  post_processing.frag  postprocessing.frag  skybox.vert  texture.frag  texture.vert  texture_deferred.frag  texture_deferred.vert
shaders/src/bloom/: bloom.frag  bloom_sascha.frag  bright_point_extraction.frag  composition.frag
shaders/src/shadows/: directional_shadow.vert
src/: Camera3D.h  main.cpp
src/engine/: BlinnPhongPass.cpp  BlinnPhongPass.h  Buffers.h  Camera3D.cpp  Camera3D.h  FrameBufferAttachment.cpp  FrameBufferAttachment.h  FramebufferAttachment.cpp  FramebufferAttachment.h  HDRPass.cpp  HDRPass.h  IPassHelper.h  LightManager.cpp  LightManager.h  Lights.cpp  Lights.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ShadowMapPass.cpp  ShadowMapPass.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  Vertex.h  VulkanBase.cpp  VulkanBase.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInitializer.cpp  VulkanInitializer.h  VulkanQueueFamiliesHelper.h  (+3 more)
src/engine/ModelLoading/: Mesh.cpp  Mesh.h  MeshRefactored.cpp  MeshRefactored.h  Model.cpp  Model.h  ModelRefactored.cpp  ModelRefactored.h  TextreRefactored.h  Texture.cpp  Texture.h  TextureRefactored.cpp
src/engine/Passes/: BlinnPhongPass.cpp  BlinnPhongPass.h  GBuffPass.cpp  GBuffPass.h  HDRPass.cpp  HDRPass.h  IPassHelper.h  LightPass.cpp  LightPass.h  ShadowMapPass.cpp  ShadowMapPass.h
src/examples/: bindless-textures.cpp  demo.cpp  hdr.cpp  model-loading.cpp  multiple-bindless.cpp  phong-shading.cpp  post-processing-texture.cpp  post-processing.cpp  refactored.cpp
